@@ -2,13 +2,15 @@ Changelog for miniShop.
 
 1.7.0 (15.06.2012)
 =============
-- Улучшена работа браузера для выбора изображений - при изменении картинки открывается нужная директория.
 - Добавлено создание комплектов товаров
+- Улучшена работа браузера для выбора изображений - при изменении картинки открывается нужная директория.
+- Новый метод getProduct, который достает ресурс со всеми свойствами, включая ТВ.
 - Исправлено добавление новых тэгов товарам
 - [#45] Количество результатов для таблиц берется из системной настройки 'default_per_page'
 -----
-- Fixed work of browser for selection of images - when changing image it's open to needed directory.
 - Added creation of kits with goods
+- New method getProduct, which retrieving resource with all properties and TVs
+- Fixed work of browser for selection of images - when changing image it's open to needed directory.
 - Fixed adding new tags to goods
 - [#45] Number of results for grids now taken from system setting 'default_per_page'
 
